# tezos

./: .gitlab-ci.yml  active_protocol_versions
scripts/: activate.sh
scripts/gen_genesis/: gen_genesis.ml
src/bin_client/: dune  tezos-client.opam
src/bin_codec/: dune  tezos-codec.opam
src/bin_node/: dune  node_config_command.ml  node_config_file.ml  tezos-node.opam
src/lib_version/: version.ml
src/proto_007_Ps9VYaKW/bin_accuser/: dune  tezos-accuser-007-Ps9VYaKW.opam
src/proto_007_Ps9VYaKW/bin_baker/: dune  tezos-baker-007-Ps9VYaKW.opam
src/proto_007_Ps9VYaKW/bin_endorser/: dune  tezos-endorser-007-Ps9VYaKW.opam
src/proto_007_Ps9VYaKW/lib_client/: dune  tezos-client-007-Ps9VYaKW.opam
src/proto_007_Ps9VYaKW/lib_client/test/: dune
src/proto_007_Ps9VYaKW/lib_client_commands/: alpha_commands_registration.ml  dune  tezos-client-007-Ps9VYaKW-commands.opam
src/proto_007_Ps9VYaKW/lib_delegate/: dune  tezos-accuser-007-Ps9VYaKW-commands.opam  tezos-baking-007-Ps9VYaKW-commands.opam  tezos-baking-007-Ps9VYaKW.opam  tezos-endorser-007-Ps9VYaKW-commands.opam
src/proto_007_Ps9VYaKW/lib_mempool/: dune  tezos-mempool-007-Ps9VYaKW.opam
src/proto_007_Ps9VYaKW/lib_parameters/: dune  tezos-protocol-007-Ps9VYaKW-parameters.opam
src/proto_007_Ps9VYaKW/lib_protocol/: .ocamlformat-ignore  TEZOS_PROTOCOL  dune-project  dune.inc  raw_context.ml  tezos-embedded-protocol-007-Ps9VYaKW.opam  tezos-protocol-007-Ps9VYaKW-tests.opam  tezos-protocol-007-Ps9VYaKW.opam
src/proto_007_Ps9VYaKW/lib_protocol/coq-of-ocaml/: config.json
src/proto_007_Ps9VYaKW/lib_protocol/test/: dune  main.ml
src/proto_007_Ps9VYaKW/lib_protocol/test/helpers/: block.ml  dune  expr.ml  tezos-007-Ps9VYaKW-test-helpers.opam
src/proto_alpha/lib_protocol/: dune.inc
tests_python/: requirements.txt
tests_python/client/: client.py  client_output.py
tests_python/launchers/: sandbox.py
tests_python/tools/: constants.py
