(executable
 (name main_baker_007_Ps9VYaKW)
 (public_name tezos-baker-007-Ps9VYaKW)
 (libraries tezos-client-base-unix
            tezos-client-commands
            tezos-baking-007-Ps9VYaKW-commands)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_protocol_007_Ps9VYaKW
                   -open Tezos_client_007_Ps9VYaKW
                   -open Tezos_client_commands
                   -open Tezos_baking_007_Ps9VYaKW_commands
                   -open Tezos_stdlib_unix
                   -open Tezos_client_base_unix)))

(alias
 (name runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:tezos-tooling:lint.sh} %{deps})))
