(library
 (name tezos_baking_007_Ps9VYaKW)
 (public_name tezos-baking-007-Ps9VYaKW)
 (libraries tezos-base
            tezos-version
            tezos-protocol-007-Ps9VYaKW
            tezos-protocol-environment
            tezos-shell-context
            tezos-shell-services
            tezos-client-base
            tezos-client-007-Ps9VYaKW
            tezos-client-commands
            tezos-stdlib-unix
            tezos-storage
            tezos-rpc-http
            tezos-rpc
            lwt-canceler)
 (library_flags (:standard -linkall))
 (modules (:standard \
                     delegate_commands
                     delegate_commands_registration))
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_protocol_007_Ps9VYaKW
                   -open Tezos_shell_services
                   -open Tezos_client_base
                   -open Tezos_client_007_Ps9VYaKW
                   -open Tezos_client_commands
                   -open Tezos_stdlib_unix
                   -open Tezos_shell_context
                   -open Tezos_storage
                   -open Tezos_rpc
                   -open Tezos_rpc_http)))

(library
 (name tezos_baking_007_Ps9VYaKW_commands)
 (public_name tezos-baking-007-Ps9VYaKW-commands)
 (libraries tezos-base
            tezos-protocol-007-Ps9VYaKW
            tezos-protocol-environment
            tezos-shell-services
            tezos-client-base
            tezos-client-007-Ps9VYaKW
            tezos-client-commands
            tezos-baking-007-Ps9VYaKW)
 (library_flags (:standard -linkall))
 (modules delegate_commands)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_protocol_007_Ps9VYaKW
                   -open Tezos_stdlib_unix
                   -open Tezos_shell_services
                   -open Tezos_client_base
                   -open Tezos_client_007_Ps9VYaKW
                   -open Tezos_client_commands
                   -open Tezos_baking_007_Ps9VYaKW
                   -open Tezos_rpc)))

(library
 (name tezos_baking_007_Ps9VYaKW_commands_registration)
 (public_name tezos-baking-007-Ps9VYaKW-commands.registration)
 (libraries tezos-base
            tezos-protocol-007-Ps9VYaKW
            tezos-protocol-environment
            tezos-shell-services
            tezos-client-base
            tezos-client-007-Ps9VYaKW
            tezos-client-commands
            tezos-baking-007-Ps9VYaKW
            tezos-baking-007-Ps9VYaKW-commands
            tezos-rpc)
 (library_flags (:standard -linkall))
 (modules delegate_commands_registration)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_protocol_007_Ps9VYaKW
                   -open Tezos_shell_services
                   -open Tezos_client_base
                   -open Tezos_client_007_Ps9VYaKW
                   -open Tezos_client_commands
                   -open Tezos_baking_007_Ps9VYaKW
                   -open Tezos_baking_007_Ps9VYaKW_commands
                   -open Tezos_rpc)))

(alias
 (name runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:tezos-tooling:lint.sh} %{deps})))
