(library
 (name tezos_mempool_007_Ps9VYaKW)
 (public_name tezos-mempool-007-Ps9VYaKW)
 (libraries tezos-base
            tezos-embedded-protocol-007-Ps9VYaKW
            tezos-protocol-007-Ps9VYaKW)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_embedded_protocol_007_Ps9VYaKW
                   -open Tezos_protocol_007_Ps9VYaKW)))

(alias
 (name runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:tezos-tooling:lint.sh} %{deps})))
