(executables
 (names test_michelson_v1_macros)
 (libraries tezos-base
            tezos-micheline
            tezos-protocol-007-Ps9VYaKW
            tezos-client-007-Ps9VYaKW
            alcotest-lwt)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_micheline
                   -open Tezos_client_007_Ps9VYaKW
                   -open Tezos_protocol_007_Ps9VYaKW)))


(alias
(name buildtest)
(deps test_michelson_v1_macros.exe))

(alias
(name runtest_michelson_v1_macros)
(action (run %{exe:test_michelson_v1_macros.exe})))

(alias
(name runtest)
(package tezos-client-007-Ps9VYaKW)
(deps (alias runtest_michelson_v1_macros)))

(alias
 (name runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:tezos-tooling:lint.sh} %{deps})))
