(executable
 (name main)
 (libraries tezos-base
            tezos-micheline
            tezos-protocol-environment
            alcotest-lwt
            tezos-007-Ps9VYaKW-test-helpers
            tezos-stdlib-unix
            tezos-client-base
            tezos-protocol-007-Ps9VYaKW-parameters
            tezos-test-services)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_micheline
                   -open Tezos_client_007_Ps9VYaKW
                   -open Tezos_protocol_007_Ps9VYaKW
                   -open Tezos_protocol_environment_007_Ps9VYaKW
                   -open Tezos_007_Ps9VYaKW_test_helpers
                   -open Tezos_test_services)))

(alias
 (name buildtest)
 (package tezos-protocol-007-Ps9VYaKW-tests)
 (deps main.exe))

(rule
 (copy %{lib:tezos-protocol-007-Ps9VYaKW-parameters:test-parameters.json}
       protocol_parameters.json))

; runs only the `Quick tests
(alias
 (name runtest_proto_007_Ps9VYaKW)
 (package tezos-protocol-007-Ps9VYaKW-tests)
 (action (run %{exe:main.exe} -v -q)))

; runs both `Quick and `Slow tests
(alias
 (name runtest_slow)
 (package tezos-protocol-007-Ps9VYaKW-tests)
 (action (run %{exe:main.exe} -v)))

(alias
 (name runtest)
 (package tezos-protocol-007-Ps9VYaKW-tests)
 (deps (alias runtest_proto_007_Ps9VYaKW)))

(alias
 (name runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:tezos-tooling:lint.sh} %{deps})))
