(library
 (name tezos_007_Ps9VYaKW_test_helpers)
 (public_name tezos-007-Ps9VYaKW-test-helpers)
 (libraries alcotest-lwt
            tezos-base
            tezos-stdlib-unix
            tezos-shell-services
            tezos-protocol-environment
            tezos-protocol-007-Ps9VYaKW
            tezos-protocol-007-Ps9VYaKW-parameters
            tezos-client-007-Ps9VYaKW)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_micheline
                   -open Tezos_stdlib_unix
                   -open Tezos_protocol_007_Ps9VYaKW
                   -open Tezos_client_007_Ps9VYaKW
                   -open Tezos_protocol_environment_007_Ps9VYaKW
                   -open Tezos_shell_services)))

(alias
 (name runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:tezos-tooling:lint.sh} %{deps})))
